orchestrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-v1
  labels:
    app: orchestrator
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator
      version: v1
  template:
    metadata:
      labels:
        app: orchestrator
        version: v1
    spec:
      containers:
      - name: orchestrator
        image: ahoqueorg/orchestrator-service
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8080
