orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
  labels:
    app: orchestrator
    service: orchestrator
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: orchestrator
