helloworld-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
#    - uri:
#        exact: /hello
    - headers:
        end-user:
          exact: ahali
    route:
    - destination:
        host: helloworld
        subset: v1
        port:
          number: 5000
  - route:
      - destination:
          host: helloworld
          subset: v2
          port:
            number: 5000
